--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "next": "13.5.4",
+    "next-seo": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-tweet": "^3.1.1"
