--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "clsx": "^2.0.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "sass": "^1.69.3",
-    "tailwindcss": "^3",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5"
   }
 }
